--- a/index.html
+++ b/index.html
@@ -14,20 +14,24 @@
   </head>
   <body>
     <div id="container">
+      <!-- Profile -->
       <div id="profile">
         <img src="assets/avatar.png" alt="Avatar" />
         <p>@hugs</p>
       </div>
+      <!-- Dark Mode Switch -->
       <div id="switch" onclick="toggleMode()">
         <button></button>
         <span></span>
       </div>
+      <!-- Links -->
       <ul>
         <li><a href="#" target="_blank">Link 1</a></li>
         <li><a href="#" target="_blank">Link 2</a></li>
         <li><a href="#" target="_blank">Link 3</a></li>
         <li><a href="#" target="_blank">Link 4</a></li>
       </ul>
+      <!-- Social Links -->
       <div id="social">
         <a href="http://" target="_blank">
           <ion-icon name="logo-github"></ion-icon>
@@ -39,10 +43,12 @@
           <ion-icon name="logo-instagram"></ion-icon>
         </a>
       </div>
+      <!-- Footer -->
       <footer>
         Feito com os dedo por <a href="http://" target="_blank">@hugs</a>
       </footer>
     </div>
+    <!-- Icon Import -->
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
